[gd_scene load_steps=27 format=2]

[ext_resource path="res://Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/animations/autobuyer.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Sprites/Menu/Options.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Menu/File.png" type="Texture" id=5]
[ext_resource path="res://Prefabs/menu/SaveMenu.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Menu/Clipboard.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Menu/ViewHide.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Menu/Info.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
border_color = Color( 1, 0, 0.380392, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0.462745 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false

[sub_resource type="DynamicFontData" id=13]
font_path = "res://Fonts/Roboto-Black.ttf"

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = SubResource( 13 )

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=8]
draw_center = false

[sub_resource type="DynamicFont" id=9]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 0.08 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 0.04 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 1, 0.0392157 )
draw_center = false

[sub_resource type="StyleBoxFlat" id=14]
draw_center = false

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 1, 1, 0.08 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 1, 1, 1, 0.04 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 1, 1, 1, 0.0392157 )
draw_center = false

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 1, 1, 0.05 )
border_color = Color( 1, 0, 0.380392, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0, 0, 0, 1 )

[node name="SaveMenu" type="MarginContainer"]
margin_right = 160.0
margin_bottom = 194.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 6 )

[node name="bg" type="Panel" parent="."]
margin_right = 196.0
margin_bottom = 213.0
custom_styles/panel = SubResource( 1 )

[node name="border" type="Panel" parent="."]
modulate = Color( 0.384314, 0.603922, 0.270588, 1 )
margin_right = 196.0
margin_bottom = 213.0
rect_clip_content = true
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 196.0
margin_bottom = 213.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 188.0
margin_bottom = 205.0
rect_pivot_offset = Vector2( -8, -8 )

[node name="m" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 44.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="h" type="HBoxContainer" parent="MarginContainer/VBoxContainer/m"]
margin_left = 5.0
margin_top = 5.0
margin_right = 175.0
margin_bottom = 39.0
alignment = 1

[node name="autosaveWheel" type="Panel" parent="MarginContainer/VBoxContainer/m/h"]
unique_name_in_owner = true
margin_top = 1.0
margin_right = 32.0
margin_bottom = 33.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="MarginContainer/VBoxContainer/m/h/autosaveWheel"]
modulate = Color( 0.384314, 0.603922, 0.270588, 1 )
frames = ExtResource( 3 )
frame = 4
playing = true
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/m/h"]
margin_left = 36.0
margin_right = 170.0
margin_bottom = 34.0

[node name="autosaveLabel" type="Label" parent="MarginContainer/VBoxContainer/m/h/VBoxContainer"]
unique_name_in_owner = true
margin_right = 134.0
margin_bottom = 15.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Autosaving"

[node name="lastSave" type="Label" parent="MarginContainer/VBoxContainer/m/h/VBoxContainer"]
unique_name_in_owner = true
margin_top = 19.0
margin_right = 134.0
margin_bottom = 34.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Time since last save: 20s"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 180.0
margin_bottom = 197.0
custom_constants/separation = 8

[node name="g" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 23, -114 )
alignment = 1

[node name="0" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/g"]
margin_left = 24.0
margin_right = 116.0
margin_bottom = 36.0

[node name="bg" type="Panel" parent="MarginContainer/VBoxContainer/VBoxContainer/g/0"]
margin_right = 92.0
margin_bottom = 36.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 7 )

[node name="m" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/g/0"]
modulate = Color( 0.384314, 0.603922, 0.270588, 1 )
margin_right = 92.0
margin_bottom = 36.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="h" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/g/0/m"]
margin_left = 5.0
margin_top = 5.0
margin_right = 87.0
margin_bottom = 31.0
alignment = 1

[node name="icon" type="Panel" parent="MarginContainer/VBoxContainer/VBoxContainer/g/0/m/h"]
margin_top = 1.0
margin_right = 24.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/VBoxContainer/g/0/m/h/icon"]
position = Vector2( 12, 12 )
texture = ExtResource( 5 )

[node name="shadow" type="Sprite" parent="MarginContainer/VBoxContainer/VBoxContainer/g/0/m/h/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 0.501961 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/g/0/m/h"]
margin_left = 28.0
margin_top = 5.0
margin_right = 82.0
margin_bottom = 20.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Save Now"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/g/0"]
margin_right = 92.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )

[node name="1" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/g"]
margin_left = 120.0
margin_right = 156.0
margin_bottom = 36.0

[node name="bg" type="Panel" parent="MarginContainer/VBoxContainer/VBoxContainer/g/1"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 7 )

[node name="m" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/g/1"]
modulate = Color( 0.137255, 0.698039, 0.552941, 1 )
margin_right = 36.0
margin_bottom = 36.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="h" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/g/1/m"]
margin_left = 5.0
margin_top = 5.0
margin_right = 31.0
margin_bottom = 31.0
alignment = 1

[node name="icon" type="Panel" parent="MarginContainer/VBoxContainer/VBoxContainer/g/1/m/h"]
margin_left = 1.0
margin_top = 1.0
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/VBoxContainer/g/1/m/h/icon"]
position = Vector2( 12, 12 )
texture = ExtResource( 4 )

[node name="shadow" type="Sprite" parent="MarginContainer/VBoxContainer/VBoxContainer/g/1/m/h/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 0.501961 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/g/1/m/h"]
visible = false
margin_left = 28.0
margin_top = 5.0
margin_right = 100.0
margin_bottom = 20.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Save Options"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/g/1"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )

[node name="browser" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 44.0
margin_right = 180.0
margin_bottom = 149.0

[node name="2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/browser"]
margin_right = 180.0
margin_bottom = 36.0

[node name="bg" type="Panel" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/2"]
margin_right = 180.0
margin_bottom = 36.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 7 )

[node name="m" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/2"]
modulate = Color( 0.384314, 0.603922, 0.270588, 1 )
margin_right = 180.0
margin_bottom = 36.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="h" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/2/m"]
margin_left = 5.0
margin_top = 5.0
margin_right = 175.0
margin_bottom = 31.0
alignment = 1

[node name="icon" type="Panel" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/2/m/h"]
margin_left = 22.0
margin_top = 1.0
margin_right = 46.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/2/m/h/icon"]
position = Vector2( 12, 12 )
texture = ExtResource( 7 )

[node name="shadow" type="Sprite" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/2/m/h/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 0.501961 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/2/m/h"]
margin_left = 50.0
margin_top = 5.0
margin_right = 148.0
margin_bottom = 20.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Export to Console"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/2"]
margin_right = 180.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/browser"]
margin_top = 40.0
margin_right = 180.0
margin_bottom = 68.0
mouse_filter = 2
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/MarginContainer"]
margin_right = 180.0
margin_bottom = 28.0
custom_constants/margin_right = 4
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/MarginContainer/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 176.0
margin_bottom = 26.0

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/MarginContainer/MarginContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
size_flags_vertical = 5
custom_styles/panel = SubResource( 14 )

[node name="helpIcon" type="Sprite" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/MarginContainer/MarginContainer/HBoxContainer/Panel"]
unique_name_in_owner = true
texture = ExtResource( 8 )
centered = false

[node name="shadow" type="Sprite" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/MarginContainer/MarginContainer/HBoxContainer/Panel/helpIcon"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 8 )
centered = false

[node name="help" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/MarginContainer/MarginContainer/HBoxContainer"]
margin_left = 28.0
margin_top = 4.0
margin_right = 117.0
margin_bottom = 19.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Save export help"

[node name="displayHelp" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/MarginContainer"]
margin_right = 180.0
margin_bottom = 28.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 17 )

[node name="help" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/browser"]
unique_name_in_owner = true
visible = false
margin_top = 72.0
margin_right = 180.0
margin_bottom = 311.0

[node name="bg" type="Panel" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/help"]
margin_right = 180.0
margin_bottom = 239.0
custom_styles/panel = SubResource( 18 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/help"]
margin_right = 180.0
margin_bottom = 239.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="help" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/help/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 176.0
margin_bottom = 235.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "- Press F12, Ctrl-Shift-J, or Ctrl-Shift-I to open your browser's console.
- Your save string is printed there.
- To copy it, you may be able to simply click Copy. If not, read on!
- It is likely that the save string is too large to have printed in its entirety. You must click \"Expand\" or \"Show more\" to view the entire string."
autowrap = true

[node name="import" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/browser"]
margin_top = 72.0
margin_right = 180.0
margin_bottom = 105.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/import"]
margin_top = 4.0
margin_right = 24.0
margin_bottom = 28.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/import/MarginContainer"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
size_flags_vertical = 5
custom_styles/panel = SubResource( 14 )

[node name="hideIconSave" type="Sprite" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/import/MarginContainer/Panel"]
texture = ExtResource( 9 )
centered = false

[node name="shadow" type="Sprite" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/import/MarginContainer/Panel/hideIconSave"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 9 )
centered = false

[node name="help" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/browser/import"]
margin_left = 28.0
margin_right = 180.0
margin_bottom = 33.0
mouse_filter = 1
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "You cannot import to the browser version."
autowrap = true

[connection signal="visibility_changed" from="." to="." method="_on_SaveMenu_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/g/0/Button" to="." method="_on_saveNow_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/browser/MarginContainer/displayHelp" to="." method="_on_displayHelp_pressed"]
